# predator-smg-expose

./: .gitignore  CMakeLists.txt  _clang-format  build_initial.sh
cmake/: FindPredator.cmake
include/: PredatorInterface.hpp
src/: PredatorInterface.cpp  smgexpose_test.cpp
